--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="title_activity_cart">Cart</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_cart1">Cart1</string>
+    <string name="tab_text_1">Individual</string>
+    <string name="tab_text_2">Shared</string>
+    <string name="tab_text_3">All</string>
 
 
 </resources>
