--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ResSplitter</string>
-    <string name="heading_name">Restaurant Name</string>
+    <string name="heading_name">SplittR</string>
     <string name="title_activity_cart">Cart</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
